@@ -9,6 +9,9 @@ Changed
     Node should no longer need reloading after adding a host
     Add padding back to sidebar items (#532)
 
+Fixed
+    Storage pool details dont load if used_by is null
+
 0.15.0 - 06/08/2022
 
 Added
